commiting updates to make them live

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1>Lucas Newman</h1>
             </div>
             <div>
-                <p id='bannerSubText'>I Design, Develop, Deploy Electronics and Software</p>
+                <p id='bannerSubText'>I Design, Develop, and Deploy Electronics and Software</p>
             </div>
         </div>
     </header>
@@ -106,8 +106,9 @@
                 <div class="achievement">
                     <h4>&lt;h4&gt; I've worked with major Institutions and Companies &lt;/h4&gt;</h4>
                     <p>&lt;P&gt; I worked with a range of institutions and companies including, The University of
-                        Newcastle and
-                        Cooks Hill Campus, and SAMSUNG on developing Ideas an software applications to increase
+                        Newcastle,
+                        Cooks Hill Campus, and SAMSUNG, working on developing Ideas an software applications to
+                        increase
                         collaboration and communication. &lt;/P&gt;</p>
                 </div>
 
@@ -223,7 +224,7 @@
                         <a href="https://code.visualstudio.com/" target="_blank">
                             <img src="assets/images/skills/vsc.png" alt="Visual Studio Code skill logo"
                                 class="grid_image">
-                            <div class="grid_text">Visual Studio Code</div>
+                            <div class="grid_text">VSC</div>
                         </a>
                     </div>
                     <div class="skill">
@@ -264,7 +265,7 @@
                     <div class="quote_author_container">
                         <img src="assets/images/quotes/uon.png" alt="Logo of the companies from i got quotes from"
                             id="author_image">
-                        <p id="author">Dr. Jacqueline D Bailey, Associate Lecturer - Computing & IT, School of
+                        <p id="author">Dr. Jacqueline D Bailey, Lecturer - Computing & IT, School of
                             Inofrmation
                             and Physical Sciences, The University of Newcastle
                         </p>
@@ -355,26 +356,28 @@
                     </div>
                 </div>
                 <!-- Portfolio project [i know] -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/Portfolio')">
+                <div class="project" onclick="travel('https://github.com/Squidly1408/Squidly-s_Folder_Tools')">
                     <!-- img -->
-                    <img src="assets/images/projects/portfolio.png" alt="placeholder image" class="project_image">
+                    <img src="assets/images/projects/SFT's.png" alt="Squidly's folder tools" class="project_image">
                     <div class="Project_text">
                         <!-- title -->
-                        <h4>My Portfolio</h4>
+                        <h4>Squidly's Folder Tools</h4>
                         <!-- about -->
-                        <p>I designed, developed, and deployed my own portfolio, the one your currently looking at right
-                            now. It has been through various versions from an Instagram inspired Web App to what is now.
+                        <p>I am designing an python app that has a multitude of of tools and commands for developers or
+                            machine learning specialists, it is made for the tasks that are a headache to do or that
+                            lead you to a sketchy website.
                         </p>
                         <div class="skills_list">
-                            <img src="assets/images/skills/flutter.png" alt="Flutter">
-                            <img src="assets/images/skills/html.png" alt="HTML">
-                            <img src="assets/images/skills/css.png" alt="CSS">
-                            <img src="assets/images/skills/js.png" alt="JasvaScript">
+                            <img src="assets/images/skills/python.png" alt="python">
+                            <img src="assets/images/skills/pyTorch.png" alt="Pytorch">
+                            <img src="assets/images/skills/tensorflow.png" alt="Tensorflow">
+                            <img src="assets/images/skills/github_inverted.png" alt="Github">
                             <img src="assets/images/skills/git.png" alt="GIT">
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <!-- experience -->
@@ -471,7 +474,7 @@
         <div class="acknowledgemets">
             <img src="./assets/images/acknowledgement/aboriginal.png" alt="Aborignal Flag icon">
             <img src="./assets/images/acknowledgement/TSI.jpg" alt="Torres Strait Islander Flag icon">
-            <p>i acknowlege the traditional people of Australia, the Aboriginal and Torres Strait Islander peoples.</p>
+            <p>i acknowlege and pay respects to the Aboriginal and Torres Strait Islander peoples.</p>
         </div>
 
         <!-- social media links -->
