adding projects to my portfolio

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Portfolio project [i know] -->
+                <!-- Squidly's Folder Tools -->
                 <div class="project" onclick="travel('https://github.com/Squidly1408/Squidly-s_Folder_Tools')">
                     <!-- img -->
                     <img src="assets/images/projects/SFT's.png" alt="Squidly's folder tools" class="project_image">
@@ -371,6 +371,47 @@
                             <img src="assets/images/skills/python.png" alt="python">
                             <img src="assets/images/skills/pyTorch.png" alt="Pytorch">
                             <img src="assets/images/skills/tensorflow.png" alt="Tensorflow">
+                            <img src="assets/images/skills/github_inverted.png" alt="Github">
+                            <img src="assets/images/skills/git.png" alt="GIT">
+                        </div>
+                    </div>
+                </div>
+                <!-- Portfolio project [i know] -->
+                <div class="project" onclick="travel('https://github.com/Squidly1408/Squidly1408.github.io')">
+                    <!-- img -->
+                    <img src="assets/images/projects/portfolio.png" alt="Squidly's folder tools" class="project_image">
+                    <div class="Project_text">
+                        <!-- title -->
+                        <h4>My Portfolio</h4>
+                        <!-- about -->
+                        <p>I have gone through mnay variations of my portfolio, however this is the one that I am most
+                            proud of, I have designed, developed and deployed this website to showcase my skills and
+                            projects.</p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/html.png" alt="html">
+                            <img src="assets/images/skills/js.png" alt="Javascript">
+                            <img src="assets/images/skills/css.png" alt="CSS">
+                            <img src="assets/images/skills/github_inverted.png" alt="Github">
+                            <img src="assets/images/skills/git.png" alt="GIT">
+                        </div>
+                    </div>
+                </div>
+                <!-- Big Picture Education Flower Graph -->
+                <div class="project" onclick="travel('https://github.com/Squidly1408/BPE-Flower')">
+                    <!-- img -->
+                    <img src="assets/images/projects/bpe-flower.png" alt="Squidly's folder tools" class="project_image">
+                    <div class="Project_text">
+                        <!-- title -->
+                        <h4>BPE-Flower</h4>
+                        <!-- about -->
+                        <p>I have designed a website to display an editable graph from Big Picture Education, this is
+                            designed to be used by teachers and students to track their progress and goals. However it
+                            use to be that there was no good editable digital version of it, until I made this.</p>
+                        </p>
+                        <div class="skills_list">
+                            <img src="assets/images/skills/html.png" alt="html">
+                            <img src="assets/images/skills/js.png" alt="JavaScript">
+                            <img src="assets/images/skills/css.png" alt="css">
                             <img src="assets/images/skills/github_inverted.png" alt="Github">
                             <img src="assets/images/skills/git.png" alt="GIT">
                         </div>
