Adding Pride Logo & Kico's and I's Anniversary

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="script.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 </head>
 
 <body>
