updating favicons per date

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <meta name="description"
         content="This is the portfolio for Lucas Newman, a software engineer who is going to change the world.">
     <title>Squidly1408</title>
-    <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
-    <link rel="apple-touch-icon" href="assets/images/logo.svg">
-    <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
+    <link id="shortcut_favicon" rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
+    <link id="apple_favicon" rel="apple-touch-icon" href="assets/images/logo.svg">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="script.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
