--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 
 <head>
+    <script src="script.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
     <meta charset="UTF-8">
     <meta name="keywords" content="Squidly1408, Lucas Newman, Software Engineer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the portfolio for Lucas Newman, a software engineer who is going to change the world.">
     <title>Squidly1408</title>
-    <link id="shortcut_favicon" rel="shortcut_favicon" href="assets/images/logo.svg" type="image/x-icon">
-    <link id="apple_favicon" rel="apple_favicon" href="assets/images/logo.svg">
+    <link id="shortcut_favicon" rel="icon" href="assets/images/logo.svg" type="image/png">
+    <link id="shortcut_favicon" rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
+    <link id="shortcut_favicon" rel="mask-icon" href="assets/images/logo.svg" type="image/svg+xml">
+    <link id="apple_favicon" rel="apple-touch-icon" href="assets/images/logo.svg">
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <script src="script.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+
 </head>
 
 <body>
