--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h4>&lt;h4&gt; I've worked with major Institutions and Companies &lt;/h4&gt;</h4>
                     <p>&lt;P&gt; I worked with a range of institutions and companies including, The University of
                         Newcastle,
-                        Cooks Hill Campus, and SAMSUNG, working on developing Ideas an software applications to
+                        Cooks Hill Campus, Big Picture Education Australia and SAMSUNG, working on developing Ideas and software applications to
                         increase
                         collaboration and communication. &lt;/P&gt;</p>
                 </div>
