--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
     <title>Squidly1408 - Error</title>
     <link rel="apple-touch-icon" href="../assets/images/logo.svg">
     <link rel="shortcut icon" href="../assets/images/logo.svg" type="image/x-icon">
-    <link href="404_page.css" rel="stylesheet" type="text/css">
-    <script src="../script.js"></script>
+    <link href="404.css" rel="stylesheet" type="text/css">
+    <script src="./script.js"></script>
 </head>
 
 <body>
@@ -19,20 +19,20 @@
     <header class="header" id="header">
         <!-- social media links -->
         <div class="icons">
-            <div><a href="mailto:lucas.newman140@gmail.com"><img src="../assets/images/icons/email.svg"
+            <div><a href="mailto:lucas.newman140@gmail.com"><img src="./assets/images/icons/email.svg"
                         alt="email link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://github.com/Squidly1408"><img src="../assets/images/icons/github.svg"
+            <div><a href="https://github.com/Squidly1408"><img src="./assets/images/icons/github.svg"
                         alt="github link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://www.linkedin.com/in/squidly1408/"><img src="../assets/images/icons/linkedin.svg"
+            <div><a href="https://www.linkedin.com/in/squidly1408/"><img src="./assets/images/icons/linkedin.svg"
                         alt="linkedin link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://discord.com/channels/Squidly108"><img src="../assets/images/icons/discord.svg"
+            <div><a href="https://discord.com/channels/Squidly108"><img src="./assets/images/icons/discord.svg"
                         alt="discord link Squidly1408" class="icon"></a> </div>
         </div>
         <!-- nav links -->
         <div class="navbar">
             <h4 onclick="back();" class="navlink">Exit</h4>
 
-            <img src="../assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
+            <img src="./assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
 
         </div>
         <!-- introduction text -->
