--- a/404.html
+++ b/404.html
@@ -12,39 +12,24 @@
     <link href="404.css" rel="stylesheet" type="text/css">
     <script src="./script.js"></script>
 </head>
-
 <body>
-
-    <!-- header including nav links, social media links, and introduction text -->
-    <header class="header" id="header">
-        <!-- social media links -->
-        <div class="icons">
-            <div><a href="mailto:lucas.newman140@gmail.com"><img src="./assets/images/icons/email.svg"
-                        alt="email link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://github.com/Squidly1408"><img src="./assets/images/icons/github.svg"
-                        alt="github link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://www.linkedin.com/in/squidly1408/"><img src="./assets/images/icons/linkedin.svg"
-                        alt="linkedin link Squidly1408" class="icon"></a> </div>
-            <div><a href="https://discord.com/channels/Squidly108"><img src="./assets/images/icons/discord.svg"
-                        alt="discord link Squidly1408" class="icon"></a> </div>
-        </div>
-        <!-- nav links -->
-        <div class="navbar">
-            <h4 onclick="back();" class="navlink">Exit</h4>
-
-            <img src="./assets/images/logo.svg" alt="Squidly1408 logo" class="logo">
-
-        </div>
-        <!-- introduction text -->
-        <div class="bannerText">
-            <div>
-                <h1>404 Error</h1>
-            </div>
-            <div>
-                <p>Page Not Found, please look elsewhere!</p>
-            </div>
-        </div>
-    </header>
+  <div class="container">
+    <!-- Replace with inline SVG for full compatibility -->
+    <img class="logo" src="assets/images/logo.svg" alt="404 Logo" />
+    <div class="text">
+      <h1><span>404</span> ERROR</h1>
+      <p>This Isn't the Page you're Looking for…</p>
+      <div>
+      <p>Link Out: <br>
+        <a href="https://squidly1408.github.io/" target="_blank">
+          https://squidly1408.github.io/
+        </a>
+      </p>
+      </div>
+    </div>
+  </div>
 </body>
+
+
 
 </html>
