fixing 404 error link

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
       <p>This Isn't the Page you're Looking for…</p>
       <div>
       <p>Link Out: <br>
-        <a href="https://squidly1408.github.io/" target="_blank">
+        <a href="https://squidly1408.github.io/">
           https://squidly1408.github.io/
         </a>
       </p>
