adding babel search

--- a/index.html
+++ b/index.html
@@ -379,17 +379,16 @@
                         </div>
                     </div>
                 </div>
-                <!-- Portfolio project [i know] -->
-                <div class="project" onclick="travel('https://github.com/Squidly1408/Squidly1408.github.io')">
+                <!-- Babel-Search -->
+                <div class="project" onclick="travel('https://github.com/Babel-Search/Babel-Search.github.io')">
                     <!-- img -->
-                    <img src="assets/images/projects/portfolio.png" alt="Squidly's folder tools" class="project_image">
+                    <img src="assets/images/projects/babel-search.png" alt="Squidly's folder tools" class="project_image">
                     <div class="Project_text">
                         <!-- title -->
-                        <h4>My Portfolio</h4>
+                        <h4>Babel-Search</h4>
                         <!-- about -->
-                        <p>I have gone through mnay variations of my portfolio, however this is the one that I am most
-                            proud of, I have designed, developed and deployed this website to showcase my skills and
-                            projects.</p>
+                        <p>Babel Search is a word-hunting game set in the infinite "Library of Babel".
+The goal is to find real words hidden in the random pages, where you race the clock, and test your vocabulary skills.. gaining more point per letter you score.</p>
                         <div class="skills_list">
                             <img src="assets/images/skills/html.png" alt="html">
                             <img src="assets/images/skills/js.png" alt="Javascript">
