adding BPEA work and Java Skill

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <h4>&lt;h4&gt; I've worked with major Institutions and Companies &lt;/h4&gt;</h4>
                     <p>&lt;P&gt; I worked with a range of institutions and companies including, The University of
                         Newcastle,
-                        Cooks Hill Campus, Big Picture Education Australia and SAMSUNG, working on developing Ideas and software applications to
+                        Cooks Hill Campus, Big Picture Education Australia and SAMSUNG, working on developing Ideas and
+                        software applications to
                         increase
                         collaboration and communication. &lt;/P&gt;</p>
                 </div>
@@ -123,6 +124,15 @@
                 <h3 class="skills_title">&lt;h3&gt; Skills &lt;/h3&gt;</h3>
                 <!-- skills logos -->
                 <div class="skillsGrid"> <!-- Programming Languages -->
+                    <!-- Java -->
+                    <div class="skill">
+                        <a href="https://www.java.com/en/" target="_blank">
+                            <img src="assets/images/skills/java.png" alt="java code skill logo" class="grid_image">
+                            <div class="grid_text">Java</div>
+                        </a>
+                    </div>
+
+                    <!-- Flutter -->
                     <div class="skill">
                         <a href="https://flutter.dev/" target="_blank">
                             <img src="assets/images/skills/flutter.png" alt="Flutter skill logo" class="grid_image">
@@ -130,25 +140,47 @@
                         </a>
                     </div>
 
+                    <!-- Dart -->
                     <div class="skill">
                         <a href="https://dart.dev/" target="_blank">
                             <img src="assets/images/skills/dart.png" alt="Dart skill logo" class="grid_image">
                             <div class="grid_text">Dart</div>
                         </a>
                     </div>
+
+                    <!-- JavaScript -->
                     <div class="skill">
-                        <a href="https://www.python.org/" target="_blank">
-                            <img src="assets/images/skills/python.png" alt="Python skill logo" class="grid_image">
-                            <div class="grid_text">Python</div>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
+                            <img src="assets/images/skills/js.png" alt="JavaScript skill logo" class="grid_image">
+                            <div class="grid_text">JavaScript</div>
                         </a>
                     </div>
+
+                    <!-- CSS -->
                     <div class="skill">
-                        <a href="https://micropython.org/" target="_blank">
-                            <img src="assets/images/skills/micropython.png" alt="MicroPython skill logo"
-                                class="grid_image">
-                            <div class="grid_text">MicroPython</div>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                            <img src="assets/images/skills/css.png" alt="CSS skill logo" class="grid_image">
+                            <div class="grid_text">CSS</div>
                         </a>
                     </div>
+
+                    <!-- HTML -->
+                    <div class="skill">
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                            <img src="assets/images/skills/html.png" alt="HTML skill logo" class="grid_image">
+                            <div class="grid_text">HTML</div>
+                        </a>
+                    </div>
+
+                    <!-- PyTorch -->
+                    <div class="skill">
+                        <a href="https://pytorch.org/" target="_blank">
+                            <img src="assets/images/skills/pyTorch.png" alt="PyTorch AI skill logo" class="grid_image">
+                            <div class="grid_text">PyTorch AI</div>
+                        </a>
+                    </div>
+
+                    <!-- TensorFlow -->
                     <div class="skill">
                         <a href="https://www.tensorflow.org/" target="_blank">
                             <img src="assets/images/skills/tensorflow.png" alt="Tensorflow AI skill logo"
@@ -156,73 +188,25 @@
                             <div class="grid_text">Tensorflow AI</div>
                         </a>
                     </div>
+
+                    <!-- MicroPython -->
                     <div class="skill">
-                        <a href="https://pytorch.org/" target="_blank">
-                            <img src="assets/images/skills/pyTorch.png" alt="PyTorch AI skill logo" class="grid_image">
-                            <div class="grid_text">PyTorch AI</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://pandas.pydata.org/" target="_blank">
-                            <img src="assets/images/skills/pandas.png" alt="Pandas AI skill logo" class="grid_image">
-                            <div class="grid_text">Pandas AI</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
-                            <img src="assets/images/skills/html.png" alt="HTML skill logo" class="grid_image">
-                            <div class="grid_text">HTML</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
-                            <img src="assets/images/skills/css.png" alt="CSS skill logo" class="grid_image">
-                            <div class="grid_text">CSS</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
-                            <img src="assets/images/skills/js.png" alt="JavaScript skill logo" class="grid_image">
-                            <div class="grid_text">JavaScript</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://github.com/" target="_blank">
-                            <img src="assets/images/skills/github.png" alt="GitHub skill logo" class="grid_image">
-                            <div class="grid_text">GitHub</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://git-scm.com/" target="_blank">
-                            <img src="assets/images/skills/git.png" alt="Git skill logo" class="grid_image">
-                            <div class="grid_text">Git</div>
+                        <a href="https://micropython.org/" target="_blank">
+                            <img src="assets/images/skills/micropython.png" alt="MicroPython skill logo"
+                                class="grid_image">
+                            <div class="grid_text">MicroPython</div>
                         </a>
                     </div>
 
+                    <!-- Python -->
                     <div class="skill">
-                        <a href="https://www.raspberrypi.org/" target="_blank">
-                            <img src="assets/images/skills/rpi.png" alt="Raspberry Pi skill logo" class="grid_image">
-                            <div class="grid_text">Raspberry Pi</div>
+                        <a href="https://www.python.org/" target="_blank">
+                            <img src="assets/images/skills/python.png" alt="Python skill logo" class="grid_image">
+                            <div class="grid_text">Python</div>
                         </a>
                     </div>
-                    <div class="skill">
-                        <a href="https://www.adafruit.com/" target="_blank">
-                            <img src="assets/images/skills/adafruit.png" alt="Adafruit skill logo" class="grid_image">
-                            <div class="grid_text">Adafruit</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://www.arduino.cc/" target="_blank">
-                            <img src="assets/images/skills/arduino.png" alt="Arduino skill logo" class="grid_image">
-                            <div class="grid_text">Arduino</div>
-                        </a>
-                    </div>
-                    <div class="skill">
-                        <a href="https://www.linux.org/#google_vignette" target="_blank">
-                            <img src="assets/images/skills/linux.png" alt="Linux skill logo" class="grid_image">
-                            <div class="grid_text">Linux</div>
-                        </a>
-                    </div>
+
+                    <!-- Visual Studio Code -->
                     <div class="skill">
                         <a href="https://code.visualstudio.com/" target="_blank">
                             <img src="assets/images/skills/vsc.png" alt="Visual Studio Code skill logo"
@@ -230,12 +214,40 @@
                             <div class="grid_text">VSC</div>
                         </a>
                     </div>
+
+                    <!-- Visual Studio -->
                     <div class="skill">
                         <a href="https://visualstudio.microsoft.com/" target="_blank">
                             <img src="assets/images/skills/vs.png" alt="Visual Studio skill logo" class="grid_image">
                             <div class="grid_text">Visual Studio</div>
                         </a>
                     </div>
+
+                    <!-- GitHub -->
+                    <div class="skill">
+                        <a href="https://github.com/" target="_blank">
+                            <img src="assets/images/skills/github.png" alt="GitHub skill logo" class="grid_image">
+                            <div class="grid_text">GitHub</div>
+                        </a>
+                    </div>
+
+                    <!-- Git -->
+                    <div class="skill">
+                        <a href="https://git-scm.com/" target="_blank">
+                            <img src="assets/images/skills/git.png" alt="Git skill logo" class="grid_image">
+                            <div class="grid_text">Git</div>
+                        </a>
+                    </div>
+
+                    <!-- Linux -->
+                    <div class="skill">
+                        <a href="https://www.linux.org/#google_vignette" target="_blank">
+                            <img src="assets/images/skills/linux.png" alt="Linux skill logo" class="grid_image">
+                            <div class="grid_text">Linux</div>
+                        </a>
+                    </div>
+
+                    <!-- Fusion 360 -->
                     <div class="skill">
                         <a href="https://www.autodesk.com/products/fusion-360/overview" target="_blank">
                             <img src="assets/images/skills/fusion360.png" alt="CAD/3D Printing skill logo"
@@ -243,15 +255,40 @@
                             <div class="grid_text">Fusion360</div>
                         </a>
                     </div>
+
+                    <!-- Autodesk Eagle -->
                     <div class="skill">
                         <a href="https://www.autodesk.com/solutions/pcb-design-software" target="_blank">
                             <img src="assets/images/skills/eagle.png" alt="PCB Design skill logo" class="grid_image">
                             <div class="grid_text">AutoDesk Eagle</div>
                         </a>
                     </div>
+
+                    <!-- Raspberry Pi -->
+                    <div class="skill">
+                        <a href="https://www.raspberrypi.org/" target="_blank">
+                            <img src="assets/images/skills/rpi.png" alt="Raspberry Pi skill logo" class="grid_image">
+                            <div class="grid_text">Raspberry Pi</div>
+                        </a>
+                    </div>
+
+                    <!-- Adafruit -->
+                    <div class="skill">
+                        <a href="https://www.adafruit.com/" target="_blank">
+                            <img src="assets/images/skills/adafruit.png" alt="Adafruit skill logo" class="grid_image">
+                            <div class="grid_text">Adafruit</div>
+                        </a>
+                    </div>
+
+                    <!-- Arduino -->
+                    <div class="skill">
+                        <a href="https://www.arduino.cc/" target="_blank">
+                            <img src="assets/images/skills/arduino.png" alt="Arduino skill logo" class="grid_image">
+                            <div class="grid_text">Arduino</div>
+                        </a>
+                    </div>
                 </div>
             </div>
-
         </div>
         <!-- Quotes Section -->
         <div class="quotes">
@@ -382,13 +419,15 @@
                 <!-- Babel-Search -->
                 <div class="project" onclick="travel('https://github.com/Babel-Search/Babel-Search.github.io')">
                     <!-- img -->
-                    <img src="assets/images/projects/babel-search.png" alt="Squidly's folder tools" class="project_image">
+                    <img src="assets/images/projects/babel-search.png" alt="Squidly's folder tools"
+                        class="project_image">
                     <div class="Project_text">
                         <!-- title -->
                         <h4>Babel-Search</h4>
                         <!-- about -->
                         <p>Babel Search is a word-hunting game set in the infinite "Library of Babel".
-The goal is to find real words hidden in the random pages, where you race the clock, and test your vocabulary skills.. gaining more point per letter you score.</p>
+                            The goal is to find real words hidden in the random pages, where you race the clock, and
+                            test your vocabulary skills.. gaining more point per letter you score.</p>
                         <div class="skills_list">
                             <img src="assets/images/skills/html.png" alt="html">
                             <img src="assets/images/skills/js.png" alt="Javascript">
@@ -480,13 +519,12 @@ The goal is to find real words hidden in the random pages, where you race the cl
             <!-- clickk -->
             <div class="place" onclick="travel('https://clickk.com.au/')">
                 <!-- img -->
-                <img src="assets/images/experiences/clickk.png" alt="Clickk logo" class="place_image">
+                <img src="assets/images/experiences/BPEA.png" alt="Clickk logo" class="place_image">
                 <div class="Place_text">
                     <!-- title -->
-                    <h4>Clickk</h4>
+                    <h4>Big Picture Education Australia</h4>
                     <!-- about -->
-                    <p>My first internship at the website development company based in Newcastle and the Hunter Valley
-                        known as Clickk where I learnt about my passion for software.</p>
+                    <p>I worked as a freelance Software developer where I worked on developing a JavaScript Plugin for their Website aiding in the design of the IBPLC graphics.</p>
                     <div class="skills_list">
                         <img src="assets/images/skills/html.png" alt="idk yet">
                         <img src="assets/images/skills/css.png" alt="idk yet">
