changing the error screen

--- a/404.html
+++ b/404.html
@@ -7,10 +7,14 @@
     <meta name="description"
         content="This is the portfolio for Lucas Newman, a software engineer who is going to change the world.">
     <title>Squidly1408 - Error</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo.svg">
-    <link rel="shortcut icon" href="../assets/images/logo.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../assets/images/logo_error.svg">
+    <link rel="shortcut icon" href="../assets/images/logo_error.svg" type="image/x-icon">
     <link href="404.css" rel="stylesheet" type="text/css">
     <script src="./script.js"></script>
+     <link id="shortcut_favicon" rel="icon" href="assets/images/logo_error.svg" type="image/png">
+    <link id="shortcut_favicon" rel="shortcut icon" href="assets/images/logo_error.svg" type="image/x-icon">
+    <link id="shortcut_favicon" rel="mask-icon" href="assets/images/logo_error.svg" type="image/svg+xml">
+    <link id="apple_favicon" rel="apple-touch-icon" href="assets/images/logo_error.svg">
 </head>
 <body>
   <div class="container">
