Update Job at SAPHI

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <!-- title -->
                     <h4>SAPHI</h4>
                     <!-- about -->
-                    <p>I work at and completed an Internship at the number one tech agnostic solution provider in
+                    <p>I work at SAPHI as a Level 2 Software Engineer and completed an Internship at the number one tech agnostic solution provider in
                         Newcastle and one of the most influential ICT Companies in Australia.</p>
                     <div class="skills_list">
                         <img src="assets/images/skills/flutter.png" alt="idk yet">
